tests/test_typing/bad/output/err1.catala_en.err
[ERROR] Error during typechecking, incompatible types:
--> integer
--> decimal

Error coming from typechecking the following expression:
 --> tests/test_typing/bad/err1.catala_en
  | 
7 |     Structure { -- i: 4.1 -- e: y };
  |                       ^^^
  + 

Type integer coming from expression:
 --> tests/test_typing/bad/common.catala_en
  | 
8 |   data i content integer
  |                  ^^^^^^^
  + 

Type decimal coming from expression:
 --> tests/test_typing/bad/err1.catala_en
  | 
7 |     Structure { -- i: 4.1 -- e: y };
  |                       ^^^
  + 
